force-app/main/default/objects/npsp__Schedulable__c/npsp__Schedulable__c.object-meta.xml
<CustomObject>
    <description>Stores those classes that we want to schedule with a certain frequency.</description>
    <label>DEPRECATED-Schedulable</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED-Schedulables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>