force-app/main/default/objects/npsp__Schedulable__c/fields/npsp__Active__c.field-meta.xml
<CustomField>
    <fullName>npsp__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the job will be active or not.</description>
    <inlineHelpText>Determina si un trabajo estará activo o no.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>