force-app/main/default/objects/npsp__Schedulable__c/fields/npsp__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Class_Name__c</fullName>
    <description>Class that will be scheduled to run at a certain frequency.</description>
    <inlineHelpText>Clase que se programará para correr con cierta frecuencia.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>